--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -147,7 +147,7 @@ p {
 	color: #149cd7;
 }
 .navbar-default .navbar-nav>li>a{
-	color: #fff;
+	color: #00087a;
 }
 .navbar-default .navbar-toggle:hover .icon-bar{
 	background-color: #149cd7;
